--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             type="text"
             name=""
             id="username"
-            placeholder="Enter your full name"
+            placeholder="Shreyansh123"
           />
           <i class="fas fa-check-circle"></i> 
           <i class="fas fa-exclamation-circle"></i>
@@ -40,7 +40,7 @@
               type="email"
               name=""
               id="email"
-              placeholder="Enter your Email" autocomplete="off"
+              placeholder="abc@gmail.com" autocomplete="off"
             />
             <i class="fas fa-check-circle"></i> 
             <i class="fas fa-exclamation-circle"></i>
@@ -53,7 +53,7 @@
               type="number"
               name=""
               id="phone" 
-              placeholder="Enter your Phone Number" autocomplete="off"
+              placeholder="1234567890" autocomplete="off"
             />
             <i class="fas fa-check-circle"></i> 
             <i class="fas fa-exclamation-circle"></i>
@@ -91,7 +91,7 @@
               type="password"
               name=""
               id="password"
-              placeholder="Enter your Password" autocomplete="off"
+              placeholder="Minimum 8 digits(can use 0-9,a-z,#,_,@)" autocomplete="off"
             />
             <i class="fas fa-check-circle"></i> 
             <i class="fas fa-exclamation-circle"></i>
@@ -138,7 +138,7 @@
           
           
           var usernamepat=/^[a-z]{3,12}[0-9]{1,4}$/i;
-          if(cpasswordVal==="")
+          if(username==="")
           {
             setErrorMsg(username,'username cannot be blank');
           }
